Fixed blockquote spacing

--- a/public/stylesheets/connecc.css
+++ b/public/stylesheets/connecc.css
@@ -48,6 +48,11 @@ blockquote {
     min-height:40px;
 }
 
+blockquote p {
+    margin-top:20px;
+    margin-bottom:20px;
+}
+
 dl {
     margin:10px 50px 20px 50px;
     text-shadow: 0 1px 0 #e5e5e5;
